0.2.1
 - ci: migrate to GitHub Actions
0.2.0
 - Drop support for Python 2 (#8)
 - Code cleanup
0.1.8
 - Include docs in sdist
0.1.7
 - Update documentation and examples
0.1.6
 - Move documentation from GitHub to readthedocs.io
 - Add universal wheel on PyPI
 - Update tests on travis with new versions of NumPy
0.1.5
 - Code cleanup
0.1.4
 - Padding is now available in all methods (#2)
 - Added new convenient submodule `pad`
 - Bugfix: autofocusing did not return the correct focusing distance.
   This resulted in a slight offset in the refocusing distance for
   the method `autofocus_stack` when `same_dist=True` was set.
 - New test functions for `pad`