@@ -1,6 +1,3 @@
-[aliases]
-test = pytest
-
 [metadata]
 license_file = LICENSE
 
